--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>지영이의 영어 한 입</title>
+    <title>지영이의 영어공부</title>
     <style>
         body { font-family: 'Apple SD Gothic Neo', sans-serif; text-align: center; padding: 20px; background-color: #fff9f9; color: #333; }
         .container { max-width: 500px; margin: auto; background: white; padding: 30px; border-radius: 30px; box-shadow: 0 10px 20px rgba(0,0,0,0.05); border: 2px solid #ffccd5; }
@@ -149,4 +149,5 @@
         updateUI(); // 초기 화면 실행
     </script>
 </body>
+
 </html>
