--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
         async function fetchDialogue() {
             try {
-                // [수정 포인트] 가장 표준적인 v1beta 및 gemini-1.5-flash 조합 사용
-                const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
+                // [성공 핵심] 모델명을 gemini-1.5-flash-latest로 구체화하고 v1beta 주소를 사용합니다.
+                const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash-latest:generateContent?key=${API_KEY}`;
                 
                 const prompt = "Generate a 6-line travel English dialogue between Staff and Jiyoung. " +
                                "Situation: Random travel context (NOT breakfast). " +
@@ -60,10 +60,9 @@
 
                 const json = await res.json();
                 
-                // 만약 여전히 모델을 못 찾으면 v1/gemini-pro로 자동 전환 시도
+                // 만약 에러가 나면 다른 모델(gemini-pro)로 즉시 재시도합니다.
                 if (json.error) {
-                    console.log("첫 번째 시도 실패, 두 번째 주소로 시도합니다.");
-                    const retryUrl = `https://generativelanguage.googleapis.com/v1/models/gemini-pro:generateContent?key=${API_KEY}`;
+                    const retryUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-pro:generateContent?key=${API_KEY}`;
                     const retryRes = await fetch(retryUrl, {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
@@ -76,7 +75,7 @@
                     processData(json);
                 }
             } catch (e) {
-                alert("연결에 문제가 발생했습니다. 키가 활성화되었는지 확인해 주세요! 오류: " + e.message);
+                alert("연결에 문제가 있습니다. API 키가 정확한지 확인해 주세요!");
                 console.error(e);
             }
         }
