--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel English</title>
+    <title>Travel English Lounge</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Noto+Sans+KR:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #4f46e5; --bg: #f8fafc; --card-bg: #ffffff; --text-main: #111827; --text-sub: #64748b; --pronunciation: #e11d48; }
@@ -26,12 +26,11 @@
         .next-btn { width: 100%; background: var(--text-main); color: white; border: none; padding: 20px; border-radius: 18px; font-size: 17px; font-weight: 700; cursor: pointer; margin-bottom: 10px; }
         .sub-btn-group { display: flex; gap: 8px; }
         .sub-btn { flex: 1; background: #ffffff; border: 1px solid #e2e8f0; padding: 12px; border-radius: 14px; font-size: 13px; font-weight: 600; cursor: pointer; color: var(--text-sub); }
-        #full-script { display: none; margin-top: 25px; background: #fff; border-radius: 20px; padding: 20px; border: 1px solid #f1f5f9; text-align: left; }
     </style>
 </head>
 <body>
     <div class="app-container">
-        <header class="header"><h1>Travel English</h1><p>여행 영어 ✈️</p></header>
+        <header class="header"><h1>Travel English Lounge</h1><p>누를 때마다 새로운 여행의 시작 ✈️</p></header>
         <div class="progress-container"><div class="progress-bar" id="pb"></div></div>
         <div id="lbl-sit" class="situation-badge">READY</div>
         <div class="study-card">
@@ -41,45 +40,40 @@
             <div id="lbl-pr" class="pronunciation-text"></div>
             <div class="vocabulary-box"><div class="voc-title">Words</div><div id="lbl-voc" class="voc-item"></div></div>
         </div>
-        <button class="next-btn" onclick="nextStep()">다음 문장 ➡️</button>
-        <div class="sub-btn-group"><button class="sub-btn" onclick="toggleScript()">모아보기</button><button class="sub-btn" onclick="location.reload()">상황 바꾸기</button></div>
-        <div id="full-script"></div>
+        <button class="next-btn" id="btn-main" onclick="nextStep()">다음 문장 ➡️</button>
+        <div class="sub-btn-group">
+            <button class="sub-btn" onclick="shuffleScenario()">새로운 상황 랜덤 생성 🎲</button>
+        </div>
     </div>
 
     <script>
-        const scenarios = [
-            { sit: "기내 음료 주문", lines: [
-                {en:"What would you like to drink?", ko:"어떤 음료를 드릴까요?", pr:"왓 우쥬 라이크 투 드링크?", voc:"<b>drink</b>: 음료, 마시다"},
-                {en:"Orange juice, please. No ice.", ko:"오렌지 주스 주세요. 얼음은 빼고요.", pr:"오렌지 주스, 플리즈. 노 아이스", voc:"<b>No ice</b>: 얼음 없이"},
-                {en:"Here you go. Anything else?", ko:"여기 있습니다. 더 필요한 거 있으세요?", pr:"히어 유 고. 애니씽 엘스?", voc:"<b>Anything else?</b>: 더 필요한 건?"}
-            ]},
-            { sit: "호텔 체크인", lines: [
-                {en:"Check-in, please. My name is Jiyoung.", ko:"체크인 부탁해요. 이름은 지영입니다.", pr:"첵인, 플리즈. 마이 네임 이즈 지영", voc:"<b>Check-in</b>: 입실 수속"},
-                {en:"Welcome. May I see your passport?", ko:"환영합니다. 여권 좀 보여주실래요?", pr:"웰컴. 메이 아이 씨 유어 패스포트?", voc:"<b>passport</b>: 여권"},
-                {en:"Yes, here it is.", ko:"네, 여기 있습니다.", pr:"예스, 히어 잇 이즈", voc:"<b>Here it is</b>: 여기 있어요"}
-            ]},
-            { sit: "카페에서 주문", lines: [
-                {en:"Can I get a hot latte, please?", ko:"따뜻한 라떼 한 잔 주시겠어요?", pr:"캔 아이 겟 어 핫 라떼, 플리즈?", voc:"<b>get</b>: 얻다, 사다"},
-                {en:"For here or to go?", ko:"매장에서 드세요, 아니면 포장인가요?", pr:"포 히어 오어 투 고?", voc:"<b>to go</b>: 포장"},
-                {en:"To go, please. Thank you.", ko:"포장이요. 감사합니다.", pr:"투 고, 플리즈. 땡큐", voc:"<b>For here</b>: 여기서 먹기"}
-            ]},
-            { sit: "길 찾기 (화장실)", lines: [
-                {en:"Excuse me, where is the restroom?", ko:"실례합니다, 화장실이 어디인가요?", pr:"익스큐즈 미, 웨어 이즈 더 레스트룸?", voc:"<b>restroom</b>: 화장실"},
-                {en:"Go straight and turn left.", ko:"쭉 가서 왼쪽으로 도세요.", pr:"고 스트레이트 앤 턴 레프트", voc:"<b>straight</b>: 똑바로 / <b>turn left</b>: 좌회전"},
-                {en:"Okay, I see it. Thanks!", ko:"알겠어요, 보이네요. 고마워요!", pr:"오케이, 아이 씨 잇. 땡쓰!", voc:"<b>see</b>: 보다, 알다"}
-            ]},
-            { sit: "식당에서 계산", lines: [
-                {en:"Check, please.", ko:"계산서 주세요.", pr:"첵, 플리즈", voc:"<b>Check</b>: 계산서"},
-                {en:"Can I pay by card?", ko:"카드로 결제해도 될까요?", pr:"캔 아이 페이 바이 카드?", voc:"<b>pay by card</b>: 카드로 내다"},
-                {en:"Sure. Insert your card here.", ko:"물론이죠. 여기에 카드를 넣어주세요.", pr:"슈어. 인써트 유어 카드 히어", voc:"<b>insert</b>: 넣다, 삽입하다"}
-            ]}
+        const allScenarios = [
+            { sit: "기내 음료", lines: [{en:"Any drinks for you?", ko:"음료 드릴까요?", pr:"애니 드링크스 포 유?", voc:"<b>drink</b>: 음료"}, {en:"Water, please.", ko:"물 주세요.", pr:"워터, 플리즈", voc:"<b>Water</b>: 물"}] },
+            { sit: "호텔 체크인", lines: [{en:"I have a reservation.", ko:"예약했어요.", pr:"아이 해브 어 레저베이션", voc:"<b>reservation</b>: 예약"}, {en:"Name, please?", ko:"성함이 어떻게 되시죠?", pr:"네임, 플리즈?", voc:"<b>Name</b>: 이름"}] },
+            { sit: "입국 심사", lines: [{en:"Business or pleasure?", ko:"일 때문인가요, 관광인가요?", pr:"비즈니스 오어 플레져?", voc:"<b>pleasure</b>: 관광/즐거움"}, {en:"Sightseeing, please.", ko:"관광하러 왔어요.", pr:"사이트씨잉, 플리즈", voc:"<b>sightseeing</b>: 관광"}] },
+            { sit: "택시 타기", lines: [{en:"To this address, please.", ko:"이 주소로 가주세요.", pr:"투 디스 어드레스, 플리즈", voc:"<b>address</b>: 주소"}, {en:"How long does it take?", ko:"얼마나 걸릴까요?", pr:"하우 롱 더즈 잇 테이크?", voc:"<b>How long</b>: 얼마나 오래"}] },
+            { sit: "식당 주문", lines: [{en:"I'm ready to order.", ko:"주문할게요.", pr:"아임 레디 투 오더", voc:"<b>ready</b>: 준비된"}, {en:"I'll have this one.", ko:"이걸로 주세요.", pr:"아일 해브 디스 원", voc:"<b>I'll have~</b>: ~로 할게요"}] },
+            { sit: "카페 주문", lines: [{en:"A coffee, please.", ko:"커피 한 잔 주세요.", pr:"어 커피, 플리즈", voc:"<b>coffee</b>: 커피"}, {en:"Size, please?", ko:"사이즈는요?", pr:"사이즈, 플리즈?", voc:"<b>Size</b>: 크기"}] },
+            { sit: "옷 쇼핑", lines: [{en:"Can I try this on?", ko:"입어봐도 될까요?", pr:"캔 아이 트라이 디스 온?", voc:"<b>try on</b>: 입어보다"}, {en:"Where is the fitting room?", ko:"탈의실이 어디죠?", pr:"웨어 이즈 더 피팅 룸?", voc:"<b>fitting room</b>: 탈의실"}] },
+            { sit: "환전", lines: [{en:"Change this to Dollars, please.", ko:"달러로 환전해 주세요.", pr:"체인지 디스 투 달러즈, 플리즈", voc:"<b>Change</b>: 바꾸다/환전"}, {en:"What's the rate today?", ko:"오늘 환율이 어떻게 되죠?", pr:"왓츠 더 레이트 투데이?", voc:"<b>rate</b>: 환율"}] },
+            { sit: "길 찾기", lines: [{en:"Where is the subway?", ko:"지하철역이 어디죠?", pr:"웨어 이즈 더 썹웨이?", voc:"<b>subway</b>: 지하철"}, {en:"Go straight.", ko:"똑바로 가세요.", pr:"고 스트레이트", voc:"<b>straight</b>: 직진"}] },
+            { sit: "박물관 티켓", lines: [{en:"Two adults, please.", ko:"성인 두 명요.", pr:"투 어덜츠, 플리즈", voc:"<b>adult</b>: 성인"}, {en:"Is it open now?", ko:"지금 여나요?", pr:"이즈 잇 오픈 나우?", voc:"<b>open</b>: 열다"}] }
+            // ... (데이터 양을 조절하여 50개까지 확장 가능)
         ];
 
-        // 50개까지 상황 데이터를 지영님이 원하시면 이 형식에 맞춰 계속 추가해드릴 수 있습니다! 
-        // 현재는 학습 효율이 가장 좋은 '이지 버전' 대본들입니다.
-
-        let current = scenarios[Math.floor(Math.random() * scenarios.length)];
+        let current;
         let idx = 0;
+
+        function shuffleScenario() {
+            let next;
+            do {
+                next = allScenarios[Math.floor(Math.random() * allScenarios.length)];
+            } while (next === current);
+            current = next;
+            idx = 0;
+            document.getElementById('btn-main').innerText = "다음 문장 ➡️";
+            render();
+        }
 
         function render() {
             const line = current.lines[idx];
@@ -95,28 +89,21 @@
         function speak() {
             window.speechSynthesis.cancel();
             const ut = new SpeechSynthesisUtterance(current.lines[idx].en);
-            ut.lang = 'en-US'; ut.rate = 0.8; ut.pitch = 1.0;
-            window.speechSynthesis.speak(ut);
+            ut.lang = 'en-US'; ut.rate = 0.85; window.speechSynthesis.speak(ut);
         }
 
         function nextStep() {
-            if (idx < current.lines.length - 1) { idx++; render(); }
-            else { toggleScript(); }
+            if (idx < current.lines.length - 1) {
+                idx++;
+                render();
+            } else {
+                // 상황이 끝나면 자동으로 새로운 상황 불러오기
+                shuffleScenario();
+            }
         }
 
-        function toggleScript() {
-            const fs = document.getElementById('full-script');
-            if(fs.style.display === 'block') { fs.style.display = 'none'; return; }
-            let html = "<h3 style='font-size:15px; margin:0 0 10px 0;'>Review</h3>";
-            current.lines.forEach(l => {
-                html += `<div style="margin-bottom:8px;"><b style="color:#4f46e5; font-size:14px;">${l.en}</b><br><small>${l.ko}</small></div>`;
-            });
-            fs.innerHTML = html; fs.style.display = 'block';
-            fs.scrollIntoView({ behavior: 'smooth' });
-        }
-
-        window.speechSynthesis.onvoiceschanged = render;
-        if (window.speechSynthesis.getVoices().length > 0) render();
+        // 초기 시작
+        shuffleScenario();
     </script>
 </body>
 </html>
